:tada: first results about the malicious attacks to the client server

--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,12 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Data folder
+
+data/*
+# Do not ignore the .gitkeep file in the logs folder
+!data/.gitkeep
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
